[gd_scene load_steps=5 format=3 uid="uid://c2smnlbex4blt"]

[ext_resource type="Script" uid="uid://be21y1i7fyjps" path="res://scenes/abilities/dash_ability/dash_ability.gd" id="1_3frg0"]
[ext_resource type="PackedScene" uid="uid://bj6s8fpr2cm3u" path="res://scenes/components/hitbox_component/hitbox_component.tscn" id="2_pd56i"]

[sub_resource type="Curve" id="Curve_pd56i"]
_data = [Vector2(0, 1), 0.0, 0.0, 0, 0, Vector2(1, 0), 0.0, 0.0, 0, 0]
point_count = 2

[sub_resource type="CircleShape2D" id="CircleShape2D_3iu0l"]

[node name="DashAbility" type="Node2D" unique_id=232209228]
script = ExtResource("1_3frg0")

[node name="QueueFreeTimer" type="Timer" parent="." unique_id=1179931720]
wait_time = 0.8
autostart = true

[node name="Line2D" type="Line2D" parent="." unique_id=606735047]
top_level = true
width = 4.0
width_curve = SubResource("Curve_pd56i")

[node name="HitboxComponent" parent="." unique_id=849292559 instance=ExtResource("2_pd56i")]

[node name="CollisionShape2D" type="CollisionShape2D" parent="HitboxComponent" unique_id=1436625827]
shape = SubResource("CircleShape2D_3iu0l")
